--- a/maamhaidee/src/index.html
+++ b/maamhaidee/src/index.html
@@ -1,13 +1,19 @@
-<!doctype html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="utf-8">
-  <title>Maamhaidee</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MORALES_FinalsOne</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/486adbd565.js" crossorigin="anonymous"></script>
+    <style>
+        .sub-title 
+        {
+            margin-left: -30px;
+        }
+    </style>      
 </head>
 <body>
-  <app-root></app-root>
+<!--add the components here!-->
 </body>
 </html>
