--- a/maamhaidee/src/index.html
+++ b/maamhaidee/src/index.html
@@ -4,8 +4,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MORALES_FinalsOne</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/486adbd565.js" crossorigin="anonymous"></script>
+    <script src="typesuck.ts"></script>
     <style>
         .sub-title 
         {
